@@ -17,104 +17,61 @@
 # limitations under the License.
 ################################################################################
 
+# Start/stop a Flink JobManager.
+USAGE="Usage: jobmanager.sh (start (local|cluster) [batch|streaming] [host] [webui-port])|stop|stop-all)"
 
 STARTSTOP=$1
 EXECUTIONMODE=$2
 STREAMINGMODE=$3
+HOST=$4 # optional when starting multiple instances
+WEBUIPORT=$5 # optinal when starting multiple instances
 
 bin=`dirname "$0"`
 bin=`cd "$bin"; pwd`
 
 . "$bin"/config.sh
 
-JAVA_VERSION=$($JAVA_RUN -version 2>&1 | sed 's/.*version "\(.*\)\.\(.*\)\..*"/\1\2/; 1q')
+if [[ $STARTSTOP == "start" ]]; then
+    if [ -z $EXECUTIONMODE ]; then
+        echo "Missing execution mode (local|cluster) argument. $USAGE."
+        exit 1
+    fi
 
-# Only set JVM 8 arguments if we have correctly extracted the version
-if [[ ${JAVA_VERSION} =~ ${IS_NUMBER} ]]; then
-    if [ "$JAVA_VERSION" -lt 18 ]; then
-        JVM_ARGS="$JVM_ARGS -XX:MaxPermSize=256m"
+    # Use batch mode as default
+    if [ -z $STREAMINGMODE ]; then
+        echo "Missing streaming mode (batch|streaming) argument. Using 'batch'."
+        STREAMINGMODE="batch"
+    fi
+
+    if [[ ! ${FLINK_JM_HEAP} =~ $IS_NUMBER ]] || [[ "${FLINK_JM_HEAP}" -lt "0" ]]; then
+        echo "[ERROR] Configured JobManager memory size is not a valid value. Please set '${KEY_JOBM_MEM_SIZE}' in ${FLINK_CONF_FILE}."
+        exit 1
+    fi
+
+    if [ "$EXECUTIONMODE" = "local" ]; then
+        if [[ ! ${FLINK_TM_HEAP} =~ $IS_NUMBER ]] || [[ "${FLINK_TM_HEAP}" -lt "0" ]]; then
+            echo "[ERROR] Configured TaskManager memory size is not a valid value. Please set ${KEY_TASKM_MEM_SIZE} in ${FLINK_CONF_FILE}."
+            exit 1
+        fi
+
+        FLINK_JM_HEAP=`expr $FLINK_JM_HEAP + $FLINK_TM_HEAP`
+    fi
+
+    if [ "${FLINK_JM_HEAP}" -gt "0" ]; then
+        export JVM_ARGS="$JVM_ARGS -Xms"$FLINK_JM_HEAP"m -Xmx"$FLINK_JM_HEAP"m"
+    fi
+
+    # Startup parameters
+    args=("--configDir" "${FLINK_CONF_DIR}" "--executionMode" "${EXECUTIONMODE}" "--streamingMode" "${STREAMINGMODE}")
+    if [ ! -z $HOST ]; then
+        args+=("--host")
+        args+=("${HOST}")
+    fi
+
+    if [ ! -z $WEBUIPORT ]; then
+        args+=("--webui-port")
+        args+=("${WEBUIPORT}")
     fi
 fi
 
-if [ "$FLINK_IDENT_STRING" = "" ]; then
-    FLINK_IDENT_STRING="$USER"
-fi
-
-FLINK_JM_CLASSPATH=`constructFlinkClassPath`
-
-log=$FLINK_LOG_DIR/flink-$FLINK_IDENT_STRING-jobmanager-$HOSTNAME.log
-out=$FLINK_LOG_DIR/flink-$FLINK_IDENT_STRING-jobmanager-$HOSTNAME.out
-pid=$FLINK_PID_DIR/flink-$FLINK_IDENT_STRING-jobmanager.pid
-log_setting=(-Dlog.file="$log" -Dlog4j.configuration=file:"$FLINK_CONF_DIR"/log4j.properties -Dlogback.configurationFile=file:"$FLINK_CONF_DIR"/logback.xml)
-
-case $STARTSTOP in
-
-    (start)
-
-        if [ -z $EXECUTIONMODE ]; then
-            echo "Please specify 'start (cluster|local) [batch|streaming]' or 'stop'"
-            exit 1
-        fi
-
-        # Use batch mode as default
-        if [ -z $STREAMINGMODE ]; then
-            echo "Did not specify [batch|streaming] mode. Falling back to batch mode as default."
-            STREAMINGMODE="batch"
-        fi
-
-        if [[ ! ${FLINK_JM_HEAP} =~ $IS_NUMBER ]]; then
-            echo "ERROR: Configured job manager heap size is not a number. Cancelling job manager startup."
-
-            exit 1
-        fi
-
-        if [ "$EXECUTIONMODE" = "local" ]; then
-            if [[ ! ${FLINK_TM_HEAP} =~ $IS_NUMBER ]]; then
-                echo "ERROR: Configured task manager heap size is not a number. Cancelling (local) job manager startup."
-
-                exit 1
-            fi
-
-            FLINK_JM_HEAP=`expr $FLINK_JM_HEAP + $FLINK_TM_HEAP`
-        fi
-
-        if [ "$FLINK_JM_HEAP" -gt 0 ]; then
-            JVM_ARGS="$JVM_ARGS -Xms"$FLINK_JM_HEAP"m -Xmx"$FLINK_JM_HEAP"m"
-        fi
-
-        mkdir -p "$FLINK_PID_DIR"
-        if [ -f $pid ]; then
-            if kill -0 `cat $pid` > /dev/null 2>&1; then
-                echo Job manager running as process `cat $pid`.  Stop it first.
-                exit 1
-            fi
-        fi
-
-        # Rotate log files
-        rotateLogFile $log
-        rotateLogFile $out
-
-        echo "Starting Job Manager"
-        $JAVA_RUN $JVM_ARGS ${FLINK_ENV_JAVA_OPTS} "${log_setting[@]}" -classpath "`manglePathList "$FLINK_JM_CLASSPATH:$INTERNAL_HADOOP_CLASSPATHS"`" org.apache.flink.runtime.jobmanager.JobManager --configDir "$FLINK_CONF_DIR" --executionMode $EXECUTIONMODE --streamingMode "$STREAMINGMODE" > "$out" 2>&1 < /dev/null &
-        echo $! > $pid
-
-    ;;
-
-    (stop)
-        if [ -f $pid ]; then
-            if kill -0 `cat $pid` > /dev/null 2>&1; then
-                echo "Stopping job manager"
-                kill `cat $pid`
-            else
-                echo "No job manager to stop"
-            fi
-        else
-            echo "No job manager to stop"
-        fi
-    ;;
-
-    (*)
-        echo "Please specify 'start (cluster|local) [batch|streaming]' or 'stop'"
-    ;;
-
-esac
+"${FLINK_BIN_DIR}"/flink-daemon.sh $STARTSTOP jobmanager "${args[@]}"
